Add /tickets/{prepIds} endpoint
